# charts_ex

./: .gitignore  Justfile  LICENSE  README.md  checksum-Elixir.ChartsEx.Native.exs  mix.exs
.github/workflows/: ci.yml  release.yml
docs/plans/: 2026-03-25-charts-ex-design.md  2026-03-25-charts-ex-implementation.md
examples/: charts_ex.livemd
lib/: charts_ex.ex
lib/charts_ex/: bar_chart.ex  candlestick_chart.ex  chart.ex  component.ex  heatmap_chart.ex  horizontal_bar_chart.ex  line_chart.ex  multi_chart.ex  native.ex  pie_chart.ex  radar_chart.ex  scatter_chart.ex  serializer.ex  table_chart.ex  theme.ex
native/charts_ex/: Cargo.toml
native/charts_ex/src/: lib.rs
test/: bar_chart_test.exs  candlestick_chart_test.exs  charts_ex_test.exs  component_test.exs  heatmap_chart_test.exs  horizontal_bar_chart_test.exs  integration_test.exs  line_chart_test.exs  multi_chart_test.exs  native_test.exs  pie_chart_test.exs  radar_chart_test.exs  scatter_chart_test.exs  serializer_test.exs  table_chart_test.exs  theme_test.exs
