[package]
name = "charts_ex"
version = "0.1.0"
edition = "2021"

[lib]
name = "charts_ex"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
charts-rs = { version = "0.3", default-features = false }
rustler = { version = "0.37", default-features = false, features = ["derive"] }
serde_json = "1"

[features]
default = ["nif_version_2_15"]
nif_version_2_15 = ["rustler/nif_version_2_15"]
nif_version_2_16 = ["rustler/nif_version_2_16"]
nif_version_2_17 = ["rustler/nif_version_2_17"]
